--- a/code/server/bin/msc/msc.cfg
+++ b/code/server/bin/msc/msc.cfg
@@ -12,6 +12,6 @@ filter                           = -1
 style                            = -1
 flush                            = 0
 maxsize                          =
-overwrite                        = 1
+overwrite                        =
 maxfile                          =
 cache                            =
